--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/md5": "^2.3.2",
     "@types/node": "^12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.22.0",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-config-prettier": "^8.5.0",
@@ -63,8 +65,12 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.22.0",
     "constructs": "^10.0.5"
+  },
+  "dependencies": {
+    "md5": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "keywords": [
     "cdk"
