--- a/package.json
+++ b/package.json
@@ -66,6 +66,10 @@
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "md5": "^2.3.0",
+    "uuid": "^8.3.2"
+  },
   "keywords": [
     "cdk"
   ],
