--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prettier": "^2.6.2",
     "projen": "^0.54.51",
     "standard-version": "^9",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^27",
     "ts-node": "^9",
     "typescript": "^4.6.4"
   },
@@ -72,6 +72,10 @@
     "md5": "^2.3.0",
     "uuid": "^8.3.2"
   },
+  "bundledDependencies": [
+    "md5",
+    "uuid"
+  ],
   "keywords": [
     "cdk"
   ],
