GeneratedConfig unit tests; prettier rules and autofix

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,10 @@
 {
-  "overrides": []
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
