feat: Construct/website (#7)
* Rerun docgen

* WIP

* Added SPA tests and website tests

* Added website tests

* Fix build errors

* GeneratedConfig unit tests; prettier rules and autofix

* SinglePageApp tests

* fix generated config logic to always return whatever is found

* additional Website construct test coverage

* remove console logs

* fix merge conflicts

* projen updates

Co-authored-by: Nathan Cazell <nathan.cazell@kikoda.com>

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/md5": "^2.3.2",
     "@types/node": "^12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.22.0",
@@ -66,6 +68,14 @@
     "aws-cdk-lib": "^2.22.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "md5": "^2.3.0",
+    "uuid": "^8.3.2"
+  },
+  "bundledDependencies": [
+    "md5",
+    "uuid"
+  ],
   "keywords": [
     "cdk"
   ],
