--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@kikoda/cdk-constructs",
+  "name": "@kikoda/constructs",
+  "description": "Collection of useful platform constructs for use with modern applications deployed with AWS",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KikodaCode/kikoda-cdk-constructs.git"
+    "url": "https://github.com/KikodaCode/kikoda-constructs.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -30,8 +31,8 @@
     "projen": "npx projen"
   },
   "author": {
-    "name": "Timothy Harris",
-    "email": "timothy.harris@kikoda.com",
+    "name": "Kikoda, LLC",
+    "email": "platform@kikoda.com",
     "organization": false
   },
   "devDependencies": {
