--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.0",
     "@types/md5": "^2.3.2",
-    "@types/node": "^12",
+    "@types/node": "^16",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -52,14 +52,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27",
     "jest-junit": "^13",
-    "jsii": "^1.57.0",
-    "jsii-diff": "^1.57.0",
-    "jsii-docgen": "^6.3.23",
-    "jsii-pacmak": "^1.57.0",
+    "jsii": "^1.58.0",
+    "jsii-diff": "^1.58.0",
+    "jsii-docgen": "^6.3.27",
+    "jsii-pacmak": "^1.58.0",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^12",
     "prettier": "^2.6.2",
-    "projen": "^0.54.51",
+    "projen": "^0.55.12",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^9",
@@ -78,8 +78,17 @@
     "uuid"
   ],
   "keywords": [
-    "cdk"
+    "awscdk",
+    "cdk",
+    "cicd",
+    "compliance",
+    "configuration",
+    "scaffolding",
+    "websites"
   ],
+  "engines": {
+    "node": ">= 16.0.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
@@ -124,7 +133,7 @@
     }
   },
   "types": "lib/index.d.ts",
-  "stability": "stable",
+  "stability": "experimental",
   "jsii": {
     "outdir": "dist",
     "targets": {},
