--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "2.23.0-alpha.0",
     "@types/jest": "^27.5.0",
     "@types/md5": "^2.3.2",
     "@types/node": "^16",
@@ -66,6 +67,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.23.0-alpha.0",
     "aws-cdk-lib": "^2.22.0",
     "constructs": "^10.0.5"
   },
