--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/md5": "^2.3.2",
     "@types/node": "^16",
     "@types/uuid": "^8.3.4",
@@ -70,10 +71,12 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "bundledDependencies": [
+    "lodash",
     "md5",
     "uuid"
   ],
