--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/md5": "^2.3.2",
-    "@types/node": "^16",
+    "@types/node": "^14",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -70,10 +71,12 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "bundledDependencies": [
+    "lodash",
     "md5",
     "uuid"
   ],
@@ -86,9 +89,6 @@
     "scaffolding",
     "websites"
   ],
-  "engines": {
-    "node": ">= 16.0.0"
-  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
