--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@ junit.xml
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
-!/.github/pull_request_template.md
 !/.prettierignore
 !/.prettierrc.json
 !/test/
@@ -55,3 +54,6 @@ junit.xml
 tsconfig.json
 !/API.md
 !/NOTICE
+!/.github/pull_request_template.md
+!/CONTRIBUTING.md
+!/CODE_OF_CONDUCT.md
