chore(checks): add codecov yaml

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
 /CODE_OF_CONDUCT.md linguist-generated
+/codecov.yml linguist-generated
 /CONTRIBUTING.md linguist-generated
 /LICENSE linguist-generated
 /NOTICE linguist-generated
