--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
     "*.d.ts",
     "node_modules/",
     "*.generated.ts",
-    "coverage"
+    "coverage",
+    "bad.handler.ts"
   ],
   "rules": {
     "prettier/prettier": [
