--- a/package.json
+++ b/package.json
@@ -100,6 +100,10 @@
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "test/util.ts"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
       "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
@@ -114,9 +118,6 @@
       "text"
     ],
     "coverageDirectory": "coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
     "testPathIgnorePatterns": [
       "/node_modules/"
     ],
