--- a/.npmignore
+++ b/.npmignore
@@ -23,3 +23,5 @@ tsconfig.tsbuildinfo
 !.jsii
 test/.tmp
 test/branch-pipelines.integ.snapshot
+test/functions/.tmp
+test/functions/typescript-function.integ.snapshot
