--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "integ:branch-pipelines:snapshot": "npx projen integ:branch-pipelines:snapshot",
     "integ:branch-pipelines:watch": "npx projen integ:branch-pipelines:watch",
     "integ:snapshot-all": "npx projen integ:snapshot-all",
+    "integ:typescript-function:assert": "npx projen integ:typescript-function:assert",
+    "integ:typescript-function:deploy": "npx projen integ:typescript-function:deploy",
+    "integ:typescript-function:destroy": "npx projen integ:typescript-function:destroy",
+    "integ:typescript-function:snapshot": "npx projen integ:typescript-function:snapshot",
+    "integ:typescript-function:watch": "npx projen integ:typescript-function:watch",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
