feat: fork Bundling from CDK NodeJsFunction

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "aws-cdk": "^2",
     "aws-cdk-lib": "2.26.0",
     "constructs": "10.0.5",
+    "delay": "^5.0.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-node": "^0.3.6",
