fix(package): add missing js files to output package

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -88,6 +88,9 @@
       "steps": [
         {
           "exec": "jsii --silence-warnings=reserved-word"
+        },
+        {
+          "exec": "cp src/typescript-function/esbuild.js lib/typescript-function/"
         }
       ]
     },
