chore: upgrade deps

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ test/functions/typescript-function.integ.snapshot/**/tree.json
 !/.github/pull_request_template.md
 !/CONTRIBUTING.md
 !/CODE_OF_CONDUCT.md
+!/.github/ISSUE_TEMPLATE/bug-report.yml
+!/.github/ISSUE_TEMPLATE/feature-request.yml
+!/.github/ISSUE_TEMPLATE/config.yml
