--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "organization": true
   },
   "devDependencies": {
-    "@kikoda/projen-templates": "^0.1.46",
+    "@kikoda/projen-templates": "^0.1.36",
+    "@types/adm-zip": "^0.5.0",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27",
     "@types/lodash": "^4.14.182",
     "@types/md5": "^2.3.2",
     "@types/node": "^14",
+    "@types/tmp": "^0.2.3",
+    "@types/unzipper": "^0.10.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -67,14 +70,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27",
     "jest-junit": "^13",
-    "jsii": "^1.63.1",
-    "jsii-diff": "^1.63.1",
+    "jsii": "^1.62.0",
+    "jsii-diff": "^1.62.0",
     "jsii-docgen": "^6.3.27",
-    "jsii-pacmak": "^1.63.1",
+    "jsii-pacmak": "^1.62.0",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^15",
     "prettier": "^2.7.1",
-    "projen": "^0.60.6",
+    "projen": "^0.58.35",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^10",
@@ -85,17 +88,35 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
+    "@aws-sdk/client-s3": "^3.131.0",
+    "@aws-sdk/client-secrets-manager": "^3.131.0",
+    "@yarnpkg/esbuild-plugin-pnp": "^2.0.2",
+    "adm-zip": "^0.5.9",
+    "cfn-lambda": "^5.1.0",
     "esbuild": "~0.13",
+    "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
+    "node-cache": "^5.1.2",
+    "promise-mysql": "^5.2.0",
+    "tmp-promise": "^3.0.3",
+    "unzipper": "^0.10.11",
     "uuid": "^8.3.2"
   },
   "bundledDependencies": [
+    "@aws-sdk/client-s3",
+    "@aws-sdk/client-secrets-manager",
     "@yarnpkg/esbuild-plugin-pnp",
+    "adm-zip",
+    "cfn-lambda",
     "esbuild",
+    "fs-extra",
     "lodash",
     "md5",
+    "node-cache",
+    "promise-mysql",
+    "tmp-promise",
+    "unzipper",
     "uuid"
   ],
   "keywords": [
