--- a/package.json
+++ b/package.json
@@ -85,19 +85,14 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@kikoda/generated-config": "^0.3.0",
-    "esbuild": "~0.13",
-    "lodash": "^4.17.21",
-    "md5": "^2.3.0",
-    "uuid": "^8.3.2"
+    "@kikoda/generated-config": "^0.4.0",
+    "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
+    "esbuild": "~0.13"
   },
   "bundledDependencies": [
     "@kikoda/generated-config",
     "@yarnpkg/esbuild-plugin-pnp",
-    "esbuild",
-    "lodash",
-    "md5",
-    "uuid"
+    "esbuild"
   ],
   "keywords": [
     "awscdk",
