fix: upgrade generate-config lib

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "organization": true
   },
   "devDependencies": {
+    "@kikoda/generated-config": "^0.5.0",
     "@kikoda/projen-templates": "^0.1.103",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27",
@@ -81,18 +82,20 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "@kikoda/generated-config": "^0.5.0",
     "aws-cdk-lib": "^2.26.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@kikoda/generated-config": "^0.4.0",
+    "@kikoda/generated-config": "^0.5.0",
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
-    "esbuild": "~0.13"
+    "esbuild": "~0.13",
+    "lodash": "^4.17.21"
   },
   "bundledDependencies": [
-    "@kikoda/generated-config",
     "@yarnpkg/esbuild-plugin-pnp",
-    "esbuild"
+    "esbuild",
+    "lodash"
   ],
   "keywords": [
     "awscdk",
