--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
   "devDependencies": {
     "@kikoda/generated-config": "0.5.1",
     "@kikoda/projen-templates": "^0.1.116",
+    "@types/adm-zip": "^0.5.0",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27",
     "@types/lodash": "^4.14.186",
     "@types/md5": "^2.3.2",
     "@types/node": "^14",
+    "@types/unzipper": "^0.10.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -87,15 +89,33 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.186.0",
+    "@aws-sdk/client-secrets-manager": "^3.186.0",
     "@kikoda/generated-config": "^0.5.1",
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
+    "adm-zip": "^0.5.9",
+    "cfn-lambda": "^5.1.0",
     "esbuild": "~0.13",
-    "lodash": "^4.17.21"
+    "fs-extra": "^10.1.0",
+    "lodash": "^4.17.21",
+    "promise-mysql": "^5.2.0",
+    "tmp-promise": "^3.0.3",
+    "unzipper": "^0.10.11",
+    "uuid": "^9.0.0"
   },
   "bundledDependencies": [
+    "@aws-sdk/client-s3",
+    "@aws-sdk/client-secrets-manager",
     "@yarnpkg/esbuild-plugin-pnp",
+    "adm-zip",
+    "cfn-lambda",
     "esbuild",
-    "lodash"
+    "fs-extra",
+    "lodash",
+    "promise-mysql",
+    "tmp-promise",
+    "unzipper",
+    "uuid"
   ],
   "keywords": [
     "awscdk",
