--- a/.npmignore
+++ b/.npmignore
@@ -26,3 +26,5 @@ test/.tmp
 test/branch-pipelines.integ.snapshot
 test/functions/.tmp
 test/functions/typescript-function.integ.snapshot
+test/website/.tmp
+test/website/website.integ.snapshot
