--- a/package.json
+++ b/package.json
@@ -96,13 +96,15 @@
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
     "esbuild": "~0.13",
     "fs-extra": "^10.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "4.17.21",
+    "minimatch": "^5.1.0"
   },
   "bundledDependencies": [
     "@yarnpkg/esbuild-plugin-pnp",
     "esbuild",
     "fs-extra",
-    "lodash"
+    "lodash",
+    "minimatch"
   ],
   "keywords": [
     "awscdk",
