--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-  "files.autoSave": "afterDelay",
   "editor.codeActionsOnSave": {
-      // "source.organizeImports": true, // conflicts with eslint/prettier
-      "source.fixAll.eslint": true,
-  },
+    "source.fixAll.eslint": "explicit"
+  }
 }
