--- a/package.json
+++ b/package.json
@@ -47,34 +47,33 @@
   },
   "devDependencies": {
     "@kikoda/generated-config": "0.5.1",
-    "@kikoda/projen-templates": "^0.2.1",
+    "@kikoda/projen-templates": "^0.2.373",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27",
-    "@types/lodash": "^4.14.191",
-    "@types/md5": "^2.3.2",
-    "@types/node": "^16",
+    "@types/lodash": "4.14.191",
+    "@types/md5": "^2.3.5",
+    "@types/node": "^16 <= 16.18.78",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
     "aws-cdk": "^2",
     "aws-cdk-lib": "2.78.0",
     "constructs": "10.0.5",
     "delay": "^5.0.0",
     "eslint": "^8",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27",
     "jest-junit": "^15",
     "jsii": "1.x",
-    "jsii-diff": "^1.78.1",
+    "jsii-diff": "^1.98.0",
     "jsii-docgen": "^6.3.27",
-    "jsii-pacmak": "^1.78.1",
-    "npm-check-updates": "^16",
-    "prettier": "^2.8.5",
-    "projen": "^0.71.22",
+    "jsii-pacmak": "^1.98.0",
+    "jsii-rosetta": "1.x",
+    "prettier": "^2.8.8",
+    "projen": "^0.82.2",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^10",
@@ -86,9 +85,9 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@kikoda/generated-config": "^0.5.1",
+    "@kikoda/generated-config": "0.5.1",
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
-    "esbuild": "~0.13",
+    "esbuild": "^0.21",
     "fs-extra": "^10.1.0",
     "lodash": "4.17.21",
     "minimatch": "^5.1.6"
@@ -101,8 +100,8 @@
     "minimatch"
   ],
   "resolutions": {
-    "@types/prettier": "2.6.0",
-    "@types/babel__traverse": "7.18.2"
+    "@types/babel__traverse": "7.18.2",
+    "@types/prettier": "2.6.0"
   },
   "keywords": [
     "awscdk",
@@ -117,13 +116,14 @@
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "test/util.ts"
     ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
