chore: upgrade deps (#357)
* chore: upgrade deps

* wip: update snapshots; fix deps

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -32,14 +32,15 @@
         "CHANGELOG": "dist/changelog.md",
         "BUMPFILE": "dist/version.txt",
         "RELEASETAG": "dist/releasetag.txt",
-        "RELEASE_TAG_PREFIX": ""
+        "RELEASE_TAG_PREFIX": "",
+        "BUMP_PACKAGE": "commit-and-tag-version@^12"
       },
       "steps": [
         {
           "builtin": "release/bump-version"
         }
       ],
-      "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
+      "condition": "git log --oneline -1 | grep -qv \"chore(release):\""
     },
     "clobber": {
       "name": "clobber",
@@ -292,7 +293,12 @@
       "description": "Creates the distribution package",
       "steps": [
         {
-          "exec": "if [ ! -z ${CI} ]; then rsync -a . .repo --exclude .git --exclude node_modules && rm -rf dist && mv .repo dist; else npx projen package-all; fi"
+          "spawn": "package:js",
+          "condition": "node -e \"if (!process.env.CI) process.exit(1)\""
+        },
+        {
+          "spawn": "package-all",
+          "condition": "node -e \"if (process.env.CI) process.exit(1)\""
         }
       ]
     },
@@ -403,7 +409,8 @@
         "CHANGELOG": "dist/changelog.md",
         "BUMPFILE": "dist/version.txt",
         "RELEASETAG": "dist/releasetag.txt",
-        "RELEASE_TAG_PREFIX": ""
+        "RELEASE_TAG_PREFIX": "",
+        "BUMP_PACKAGE": "commit-and-tag-version@^12"
       },
       "steps": [
         {
@@ -419,13 +426,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@kikoda/generated-config,@kikoda/projen-templates,@types/fs-extra,@types/md5,@types/uuid,delay,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,jsii-diff,jsii-docgen,jsii-pacmak,prettier,projen,ts-node,typescript,@yarnpkg/esbuild-plugin-pnp,esbuild,fs-extra,minimatch"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@kikoda/generated-config,@kikoda/projen-templates,@types/fs-extra,@types/md5,@types/minimatch,@types/uuid,delay,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,jsii-diff,jsii-pacmak,prettier,projen,ts-node,typescript,@yarnpkg/esbuild-plugin-pnp,esbuild,fs-extra,minimatch"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @kikoda/generated-config @kikoda/projen-templates @types/fs-extra @types/jest @types/lodash @types/md5 @types/node @types/uuid @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk delay eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest-junit jest jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii prettier projen standard-version ts-jest ts-node typescript @yarnpkg/esbuild-plugin-pnp esbuild fs-extra lodash minimatch aws-cdk-lib constructs"
+          "exec": "yarn upgrade @kikoda/generated-config @kikoda/projen-templates @types/fs-extra @types/jest @types/lodash @types/md5 @types/minimatch @types/node @types/uuid @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk commit-and-tag-version delay eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest-junit jest jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii prettier projen ts-jest ts-node typescript @yarnpkg/esbuild-plugin-pnp esbuild fs-extra lodash minimatch aws-cdk-lib constructs"
         },
         {
           "exec": "npx projen"
