--- a/package.json
+++ b/package.json
@@ -47,34 +47,35 @@
   },
   "devDependencies": {
     "@kikoda/generated-config": "0.5.1",
-    "@kikoda/projen-templates": "^0.2.407",
+    "@kikoda/projen-templates": "^0.2.461",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27",
     "@types/lodash": "4.14.191",
     "@types/md5": "^2.3.5",
+    "@types/minimatch": "^5.1.2",
     "@types/node": "^16 <= 16.18.78",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
     "aws-cdk": "^2",
     "aws-cdk-lib": "2.78.0",
+    "commit-and-tag-version": "^12",
     "constructs": "10.0.5",
     "delay": "^5.0.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27",
     "jest-junit": "^15",
     "jsii": "1.x",
-    "jsii-diff": "^1.101.0",
-    "jsii-docgen": "^6.3.27",
-    "jsii-pacmak": "^1.101.0",
+    "jsii-diff": "^1.112.0",
+    "jsii-docgen": "^10.5.0",
+    "jsii-pacmak": "^1.112.0",
     "jsii-rosetta": "1.x",
     "prettier": "^2.8.8",
-    "projen": "^0.82.8",
-    "standard-version": "^9",
+    "projen": "^0.86.10",
     "ts-jest": "^27",
     "ts-node": "^10",
     "typescript": "^4.9.5"
@@ -87,7 +88,7 @@
   "dependencies": {
     "@kikoda/generated-config": "0.5.1",
     "@yarnpkg/esbuild-plugin-pnp": "^2.0.3",
-    "esbuild": "^0.23",
+    "esbuild": "^0.25",
     "fs-extra": "^10.1.0",
     "lodash": "4.17.21",
     "minimatch": "^5.1.6"
@@ -122,8 +123,10 @@
       "test/util.ts"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/@(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
